crates/brix-conformance/tests/snapshots/errata__errata_0001_entity_key_conflict_rev1.snap
---
source: crates/brix-conformance/tests/errata.rs
expression: render(settled)
---
revision 1
  RawLabel:
    { code: "w1", label: "B" }
  KeyConflict:
    Widget (2 candidates)
