crates/brix-conformance/tests/snapshots/errata__errata_0001_matchdigest_supportref_rev1.snap
---
source: crates/brix-conformance/tests/errata.rs
expression: "render(&revisions[0])"
---
revision 1
  Flagged:
    { code: "x1" }
  SourceA:
    { code: "x1" }
  SourceB:
    { code: "x1" }
