crates/brix-conformance/tests/snapshots/errata__errata_0001_matchdigest_supportref_rev2.snap
---
source: crates/brix-conformance/tests/errata.rs
expression: "render(&revisions[1])"
---
revision 2
  Flagged:
    { code: "x1" }
  SourceB:
    { code: "x1" }
