crates/brix-conformance/tests/snapshots/errata__errata_0002_edge_identity_compatibility_domain_rev1.snap
---
source: crates/brix-conformance/tests/errata.rs
expression: "render(&revisions[0])"
---
revision 1
  A:
    { x: 42 }
  B:
    { x: 42 }
